Stop title wrapping in overlay

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,12 @@ h1, h2 {
 	font-family: Eater;
 }
 
+hr {
+    border: 0;
+    height: 3px;
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
+}
+
 p {
 	font-family: "East Sea Dokdo";
 	font-size: 37px;
@@ -129,6 +135,10 @@ button:hover {
 #title-o {
 	width: 40px;
 	height: auto;
+}
+
+#no-wrap {
+	white-space: nowrap;
 }
 
 .brain-image {
